--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <b>Procedure:</b>
     <ol>
         <li>copy infohash</li>
-        <li>edit <a href="https://github.com/sloev/swarm.buro.earth/edit/main/infohashes.env">infohashes.env</a></li>
+        <li>edit <a href="https://github.com/sloev/swarm.buro.earth/edit/main/infohashes.json">infohashes.json</a></li>
         <li>add <i>infohash line</i> from above to the file</li>
     </ol>
   </div>
